Fixed testarea rows attribute, and input text is clipped under.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,7 +86,7 @@ h2 {
 .btn-go-back {
   font-weight: normal;
   margin: 0 0 1rem;
-
+  padding: 0.35rem 0.75rem;
   border: 1px solid #343a40;
 }
 
@@ -171,8 +171,10 @@ i.details-icon {
 }
 
 .join-market-sm {
-  font-size: 110%;
-  border: 2px solid black;
+  font-size: 100%;
+  font-weight: 400;
+  border: 2px solid white;
+  text-shadow: 1px 1px 6px black;
   position: absolute;
   bottom: 0.5rem;
   right: 0.5rem;
@@ -223,6 +225,20 @@ i.details-icon {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+/* Product Edit Form */
+.form-comtrol {
+  padding: 0.5rem 1rem;
+}
+
+input.form-control {
+  height: 3rem;
+  line-height: 3rem;
+}
+
+textarea.form-control {
+  line-height: 1.75rem;
 }
 
 /* Product component */
